# inductor-debug-module

./: .gitignore  HPML_Project.ipynb  PROJECT_PLAN.md  README.md  ROBUSTNESS_ANALYSIS.md  comprehensive_test.py  demo.py  goal_showcase_report.txt  manual_peek.py  mbert_mock_benchmark.py  mock_backend.py  mock_backend_use.py  pyproject.toml  requirements.txt  run_goal_showcase.py  test_bert.py  test_constraints.py  test_guards.py
benchmarks/: __init__.py  base.py  bert.py  mamba.py  resnet.py  runner.py
benchmarks/results/: benchmark_summary_1764741134.json  benchmark_summary_1764741134.txt  benchmark_summary_1764741155.json  benchmark_summary_1764741155.txt  benchmark_summary_1764741232.json  benchmark_summary_1764741232.txt  benchmark_summary_1764741248.json  benchmark_summary_1764741248.txt  benchmark_summary_1764741271.json  benchmark_summary_1764741271.txt  benchmark_summary_1764741320.json  benchmark_summary_1764741320.txt  benchmark_summary_1764741342.json  benchmark_summary_1764741342.txt  bert-base-multilingual_1764741145.json  bert-base-multilingual_1764741329.json  mamba-130m_1764741227.json  mamba-130m_1764741243.json  resnet-18_1764741128.json  (+4 more)
context/: explore_guards.py  repro_mock.py
debug_module/: __init__.py  cli.py
frontend/: app.py
teammates/: README.md  setup.py
tests/: __init__.py  comprehensive_test.py  fx_utils.py  mbert_mock_demo.py  test_adapters.py  test_aotbackend.py  test_backend_minifier.py  test_bert.py  test_cli.py  test_constraints.py  test_guards.py  test_kerneldiff.py  test_kerneldiff_bert.py  test_minifier.py  test_reports.py
(+21 files in other folders)
